# monitorink

./: .gitignore  Cargo.toml  db.sql  monitorink.sublime-workspace  run-agent.sh  run-server.sh
agent/: Cargo.toml
agent/src/: main.rs
server/: Cargo.toml  db.sql
server/src/: appconfig.rs  auth.rs  home.rs  layout.rs  logged_user.rs  main.rs  server.rs
