[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
sysinfo = {git = "https://github.com/GuillaumeGomez/sysinfo" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
execute="*"
port_scanner="*"
dotenv="*"
config="*"
once_cell = "*"
uuid="*"
machine-uid="*"
reqwest= { version = "*", features = ["json", "serde_json"] }
clap = { version = "4.1.4", features = ["derive"] }
