[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features=["full"]}
serde={version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
config = "0.13.1"
derive_more = "0.99.17"
once_cell = "*"
sqlxmq = "*"
sqlx = "*"
reqwest = "*"
futures = "*"
colored = "*"
axum={version ="*", features = ["headers"]}
uuid = {version = "1.1.2", features = ["serde", "v4"]}
magic-crypt = {version = "3.1.10"}
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
rand_core = "0.6.4"
async-session = "*"
sailfish = "*"
bcrypt = "*"
regex="*"
chrono-humanize="*"
headers="*"
http="*"
maud="*"
env_logger="*"
scraper="*"
